# c-parallel-sum

./: .gitignore  CMakeLists.txt
open-cl/: main.c  my_kernel.cl
open-mp/: main.c
sequential/: main.c
utils/: args.c  args.h  arrays.c  arrays.h  timers.c  timers.h
